--- a/Alura/Projeto saas/index.html
+++ b/Alura/Projeto saas/index.html
@@ -22,13 +22,16 @@
             <a href="about.html" class="menu__link">Página Sobre nós</a>
           </li>
           <li class="menu__links">
-            <a href="index.html" class="menu__link">Página Cães</a>
+            <a href="collection.html" class="menu__link">Página Cães</a>
           </li>
           <li class="menu__links">
-            <a href="index.html" class="menu__link">Página Gatos</a>
+            <a href="collection.html" class="menu__link">Página Gatos</a>
           </li>
           <li class="menu__links">
-            <a href="index.html" class="menu__link">Página Pássaros</a>
+            <a href="collection.html" class="menu__link">Página Pássaros</a>
+          </li>
+          <li class="menu__links">
+            <a href="contact.html" class="menu__link">Contato</a>
           </li>
         </ul>
       </nav>
@@ -36,7 +39,7 @@
     <main class="main">
       <div class="main__content">
         <article class="main__post">
-          <a href="#" class="main__title"
+          <a href="article.html" class="main__title"
             >Cuidado com os animais durante a quarentena</a
           >
           <div class="main__subtitle">
@@ -62,6 +65,40 @@
             </div>
           </div>
         </article>
+      </div>
+      <div class="main__sidebar sidebar">
+        <aside class="sidebar__top">
+          <p class="sidebar__title">Top posts</p>
+          <ui class="sidebar__posts">
+            <li class="sidebar__list">
+              <img src="assets/img/cat.jpg" alt="gato" class="sidebar__img" />
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title"
+                  >Adotar um gato: tudo o que você precisa saber</a
+                >
+                <p class="sidebar__post-date">15/08/2002</p>
+              </div>
+            </li>
+            <li class="sidebar__list">
+              <img src="assets/img/cat.jpg" alt="gato" class="sidebar__img" />
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title"
+                  >Adotar um gato: tudo o que você precisa saber</a
+                >
+                <p class="sidebar__post-date">15/08/2002</p>
+              </div>
+            </li>
+            <li class="sidebar__list">
+              <img src="assets/img/cat.jpg" alt="gato" class="sidebar__img" />
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title"
+                  >Adotar um gato: tudo o que você precisa saber</a
+                >
+                <p class="sidebar__post-date">15/08/2002</p>
+              </div>
+            </li>
+          </ui>
+        </aside>
       </div>
     </main>
     <footer class="footer">
