--- a/Alura/Guia de estilos/casaverde/index.html
+++ b/Alura/Guia de estilos/casaverde/index.html
@@ -1,67 +1,247 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Casa Verde</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@900&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/base/base.css" />
+    <link rel="stylesheet" href="assets/css/componentes/cabecalho.css" />
     <link rel="stylesheet" href="assets/css/componentes/botoes.css" />
     <link rel="stylesheet" href="assets/css/componentes/input.css" />
+    <link rel="stylesheet" href="assets/css/componentes/rodape.css" />
+    <link rel="stylesheet" href="assets/css/chamada.css" />
     <link rel="stylesheet" href="assets/css/componentes/cartao.css" />
     <link rel="stylesheet" href="assets/css/componentes/item.css" />
+    <link rel="stylesheet" href="assets/css/como-conseguir.css" />
     <link rel="stylesheet" href="assets/css/componentes/produto.css" />
+    <link rel="stylesheet" href="assets/css/ofertas.css" />
+    <link rel="stylesheet" href="assets/css/componentes/video.css" />
   </head>
   <body>
-    <main class="container">
-      <button class="botao">Assinar Newsletter</button>
-      <input
-        type="text"
-        class="input input--icone input--email"
-        placeholder="Insira seu e-mail"
-        aria-label="Insira seu e-mail"
-      />
-      <button class="botao botao--alternativo">Botão alternativo</button>
-      <article class="cartao">
-        <h2 class="titulo alinhamento--meio">
-          Como conseguir
-          <span class="titulo--destaque">minha planta</span>
+    <header class="cabecalho container">
+      <img
+        src="assets/img/logo.svg"
+        alt="logo da casa verde"
+        class="cabecalho__logo"
+      /><a href="#"
+        ><img
+          src="assets/img/icones/carrinho.svg"
+          alt=""
+          class="cabecalho__carrinho"
+      /></a>
+    </header>
+    <main>
+      <section class="chamada container">
+        <h2 class="titulo">
+          Sua casa com as
+          <span class="titulo--destaque">melhores plantas</span>
         </h2>
-        <ul class="lista-item">
-          <li class="item">
-            <span class="item__icone item__icone--cursor"></span>
-            <p>Escolha suas plantas</p>
+        <p class="chamada__texto texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+          dicta provident explicabo quisquam repudiandae officia dolorem quidem?
+          Neque magnam id et qui dolorem quod autem maiores voluptatem ipsa
+          nobis! Quam!
+        </p>
+        <img
+          src="assets/img/planta-chamada.png"
+          alt=""
+          class="chamada__imagem"
+        />
+        <form action="#" class="chamada__formulario">
+          <input
+            type="text"
+            class="input input--icone input--email"
+            placeholder="Insira seu e-mail"
+          /><button class="botao">Assinar Newsletter</button>
+        </form>
+      </section>
+      <section class="container como-conseguir">
+        <article class="cartao">
+          <h2 class="titulo alinhamento--meio">
+            Como conseguir
+            <span class="titulo--destaque">minha planta</span>
+          </h2>
+          <ul class="lista-item">
+            <li class="item">
+              <span class="item__icone item__icone--cursor"></span>
+              <p>Escolha suas plantas</p>
+            </li>
+            <li class="item">
+              <span class="item__icone item__icone--carrinho"></span>
+              <p>Faça seu pedido</p>
+            </li>
+            <li class="item">
+              <span class="item__icone item__icone--caminhao"></span>
+              <p>Aguarde na sua casa</p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="container ofertas">
+        <h2 class="titulo alinhamento--meio">
+          Conheça nossos
+          <span class="titulo--destaque">produtos</span>
+        </h2>
+        <ul>
+          <li class="produto">
+            <img
+              src="assets/img/produto-01.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 1</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
           </li>
-          <li class="item">
-            <span class="item__icone item__icone--carrinho"></span>
-            <p>Faça seu pedido</p>
+          <li class="produto">
+            <img
+              src="assets/img/produto-02.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 2</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
           </li>
-          <li class="item">
-            <span class="item__icone item__icone--caminhao"></span>
-            <p>Aguarde na sua casa</p>
+          <li class="produto">
+            <img
+              src="assets/img/produto-03.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 3</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
+          </li>
+          <li class="produto">
+            <img
+              src="assets/img/produto-04.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 4</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
+          </li>
+          <li class="produto">
+            <img
+              src="assets/img/produto-05.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 5</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
+          </li>
+          <li class="produto">
+            <img
+              src="assets/img/produto-06.png"
+              alt=""
+              class="produto__imagem"
+            />
+            <div class="produto__conteudo">
+              <h3 class="produto__titulo titulo--destaque">Titulo 6</h3>
+              <p class="produto__preco">R$ 20,00</p>
+              <a href="" class="produto__comprar"
+                >Comprar<span class="produto__comprar--icone"></span
+              ></a>
+            </div>
           </li>
         </ul>
-      </article>
-      <article class="produto">
-        <img
-          src="assets/img/produto-01.png"
-          alt="foto do produto"
-          class="produto__imagem"
-        />
-        <div class="produto__conteudo">
-          <h3 class="produto__titulo titulo--destaque">Ajufa reptans</h3>
-          <p class="produto__preco">R$ 20,00</p>
-          <a href="#" class="produto__comprar"
-            >Comprar<span class="produto__comprar--icone"></span
-          ></a>
-        </div>
-      </article>
+      </section>
+      <section class="container">
+        <h2 class="titulo alinhamento--meio">
+          Veja aqui nossos
+          <span class="titulo--destaque">vídeos</span>
+        </h2>
+        <ul>
+          <li class="cartao-de-video container">
+            <div class="cartao-de-video__video">
+              <img src="https://picsum.photos/278/252" alt="" />
+            </div>
+            <h3 class="cartao-de-video__titulo">Vídeo XYZ</h3>
+            <p>Publicado em março de 2021</p>
+          </li>
+          <li class="cartao-de-video container">
+            <div class="cartao-de-video__video">
+              <img src="https://picsum.photos/278/252" alt="" />
+            </div>
+            <h3 class="cartao-de-video__titulo">Vídeo XYZ</h3>
+            <p>Publicado em março de 2021</p>
+          </li>
+          <li class="cartao-de-video container">
+            <div class="cartao-de-video__video">
+              <img src="https://picsum.photos/278/252" alt="" />
+            </div>
+            <h3 class="cartao-de-video__titulo">Vídeo XYZ</h3>
+            <p>Publicado em março de 2021</p>
+          </li>
+          <li class="cartao-de-video container">
+            <div class="cartao-de-video__video">
+              <img src="https://picsum.photos/278/252" alt="" />
+            </div>
+            <h3 class="cartao-de-video__titulo">Vídeo XYZ</h3>
+            <p>Publicado em março de 2021</p>
+          </li>
+        </ul>
+      </section>
     </main>
+    <footer class="container rodape">
+      <img src="assets/img/logo.svg" alt="" class="rodape__logo" />
+      <ul class="rodape__social">
+        <li>
+          <a href="#" class="rodape__social-midia"
+            ><img src="assets/img/icones/facebook.svg" alt=""
+          /></a>
+        </li>
+        <li>
+          <a href="#" class="rodape__social-midia"
+            ><img src="assets/img/icones/twitter.svg" alt=""
+          /></a>
+        </li>
+        <li>
+          <a href="#" class="rodape__social-midia"
+            ><img src="assets/img/icones/instagram.svg" alt=""
+          /></a>
+        </li>
+      </ul>
+      <address class="rodape__unidade texto">
+        <span class="rodape__unidade-titulo">Rio de Janeiro</span>
+        Rua Siqueira Campos, 171, 303<br />
+        Copabacana<br />
+        Telefone: (21) 99999-9999
+      </address>
+      <address class="rodape__unidade texto">
+        <span class="rodape__unidade-titulo">Rio de Janeiro</span>
+        Rua Siqueira Campos, 171, 303<br />
+        Copabacana<br />
+        Telefone: (21) 99999-9999
+      </address>
+    </footer>
   </body>
 </html>
