--- a/Web Moderno/ajax/axios2.html
+++ b/Web Moderno/ajax/axios2.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='UTF-8'>
+  <head>
+    <meta charset="UTF-8" />
     <title>Axios #02</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <link rel="stylesheet" href="css/estilo.css" />
     <script src="js/axios.js"></script>
-</head>
+  </head>
 
-<body class="conteudo exercicio">
+  <body class="conteudo exercicio">
     <h1>Axios Get/Post</h1>
     <div id="get"></div>
     <div id="post"></div>
 
     <script>
-        // ...
+      function exibirResultado(id, dados) {
+        const texto = JSON.stringify(dados);
+        document.getElementById(id).innerHTML = texto;
+      }
+
+      axios
+        .get("parOuImpar", {
+          params: {
+            numero: 52,
+          },
+        })
+        .then((resp) => exibirResultado("get", resp.data));
     </script>
-</body>
+  </body>
+</html>
