--- a/Programadorbr/PaginadeCaptura/index.html
+++ b/Programadorbr/PaginadeCaptura/index.html
@@ -4,7 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/ico.png" type="image/png" />
+    <link
+      rel="stylesheet"
+      href="./css/style.css
+    "
+    />
     <title>Workshop</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <h1 class="title">PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEU NEGOCIO</h1>
+      </header>
+      <section>
+        <div class="formContainer">
+          <h2 class="mb">GARANTA O SEU LUGAR NO WORKSHOP</h2>
+          <p class="mb">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor nam
+            soluta minima rerum perspiciatis repudiandae eligendi, neque harum
+            laudantium ipsa deleniti saepe cumque placeat sed rem, autem
+            possimus fugit eos.
+          </p>
+          <form>
+            <input type="text" name="name" id="name" placeholder="Nome" />
+            <input type="text" name="email" id="email" placeholder="Email" />
+            <select name="place">
+              <option value="rj">Rio de Janeiro</option>
+              <option value="sp">São Paulo</option>
+              <option value="mg">Minas Gerais</option>
+              <option value="es">Espirito Santo</option>
+            </select>
+            <input type="submit" value="INSCREVA-SE" />
+          </form>
+        </div>
+      </section>
+      <footer>
+        <img src="./img/face.jpg" class="picture" alt="" />
+        <div class="description">
+          <h3>O Palestrante</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            doloremque voluptate ut aut, iusto consectetur repellendus harum
+            nihil, maiores odio modi enim aperiam. Sint voluptatum laborum odit
+            pariatur, omnis provident.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis
+            dolor, fuga saepe, placeat provident magni quibusdam explicabo
+            dolore magnam voluptatem dignissimos eum nam quisquam sapiente ea
+            voluptate quos, repudiandae consequatur.
+          </p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
