--- a/Programadorbr/Churras/index.html
+++ b/Programadorbr/Churras/index.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     <title>Churrascometro</title>
+  </head>
 
-</head>
+  <body>
+    <div class="divisor">
+      <div class="n1">
+        <img
+          src="./assets/images/barbecue.svg"
+          alt="Figura de uma grill de fritar carne de churrasco, com uma fumaça saindo, simulando a fritura de algo com o vapor saindo"
+        />
+      </div>
+      <div class="n2">
+        <div class="container">
+          <h1>Churrascômetro</h1>
+          <input
+            id="adultos"
+            name="adultos"
+            type="number"
+            placeholder="Adultos"
+          />
+          <input
+            id="criancas"
+            name="criancas"
+            type="number"
+            placeholder="Crianças"
+          />
+          <input
+            id="duracao"
+            name="duracao"
+            type="number"
+            placeholder="Duração (h)"
+          />
+          <button onclick="calcular()" class="btn">Calcular</button>
 
-<body>
-
-    <div class="container">
-        <h1>Churrascômetro</h1>
-        <input id="adultos" name="adultos" type="number" placeholder="Adultos">
-        <input id="criancas" name="criancas" type="number" placeholder="Crianças">
-        <input id="duracao" name="duracao" type="number" placeholder="Duração (h)">
-        <button onclick="calcular()">Calcular</button>
-
-        <div id="resultado">
-
+          <div id="resultado"></div>
         </div>
+      </div>
     </div>
 
     <script src="./scripts/script.js"></script>
-</body>
-
+  </body>
 </html>
