--- a/Bootcamp DIO/Carrefour/Clone Netflix/index.html
+++ b/Bootcamp DIO/Carrefour/Clone Netflix/index.html
@@ -10,33 +10,34 @@
     <link rel="stylesheet" href="./styles/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="./styles/owl/owl.theme.default.min.css" />
     <link rel="stylesheet" href="./styles/responsive.css" />
-    <title>Netflix</title>
+    <title>GAMEFLIX</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <h2 class="logo"><a href="#">GAMEFLIX</a></h2>
         <nav>
           <a href="">Inicio</a>
-          <a href="">series</a>
-          <a href="">Filmes</a>
-          <a href="">Documentários</a>
+          <a href="">Jogos</a>
+          <a href="">Sobre</a>
+          <a href="">Entrar</a>
         </nav>
       </div>
     </header>
     <main>
       <div class="filme-principal">
         <div class="container">
-          <h3 class="titulo">HOUSE OF CARDS</h3>
+          <h3 class="titulo">RESIDENT EVIL VILLAGE</h3>
           <p class="descricao">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-            accusantium dicta explicabo quidem officiis nisi distinctio sed
-            tempore odio rerum, suscipit repellat laudantium. Nihil praesentium
-            dicta odit nobis architecto adipisci.
+            Ambientado anos após os eventos terríveis do aclamado Resident Evil
+            7: Biohazard, a nova história começa com Ethan Winters e sua esposa,
+            Mia, vivendo tranquilamente em um novo lugar, livres dos pesadelos
+            do passado. Mas quando estavam começando a construir uma nova vida,
+            ocorre novamente uma tragédia.
           </p>
           <div class="botoes">
             <button role="button" class="botao">
-              <i class="fas fa-play"></i> ASSISTIR AGORA
+              <i class="fas fa-shopping-cart"></i> COMPRAR AGORA
             </button>
             <button role="button" class="botao">
               <i class="fas fa-info-circle"></i>MAIS INFORMAÇÕES
@@ -46,36 +47,37 @@
       </div>
     </main>
     <div class="carrosel-filmes">
+      <h2 class="mais-jogados">Mais jogados</h2>
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img class="box-filme" src="img/mini1.jpg" alt="" />
+          <img class="box-filme" src="img/img1.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini2.jpg" alt="" />
+          <img class="box-filme" src="img/img2.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini3.jpg" alt="" />
+          <img class="box-filme" src="img/img3.jpg" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini4.jpg" alt="" />
+          <img class="box-filme" src="img/img4.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini5.jpg" alt="" />
+          <img class="box-filme" src="img/img5.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini6.jpg" alt="" />
+          <img class="box-filme" src="img/img6.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini7.jpg" alt="" />
+          <img class="box-filme" src="img/img7.png" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini8.jpg" alt="" />
+          <img class="box-filme" src="img/img8.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini9.jpg" alt="" />
+          <img class="box-filme" src="img/img9.webp" alt="" />
         </div>
         <div class="item">
-          <img class="box-filme" src="img/mini10.jpg" alt="" />
+          <img class="box-filme" src="img/img10.webp" alt="" />
         </div>
       </div>
     </div>
