--- a/Bootcamp DIO/Carrefour/Clone Netflix/index.html
+++ b/Bootcamp DIO/Carrefour/Clone Netflix/index.html
@@ -18,9 +18,9 @@
         <h2 class="logo"><a href="#">GAMEFLIX</a></h2>
         <nav>
           <a href="">Inicio</a>
-          <a href="">Jogos</a>
+          <a href="">Categorias</a>
           <a href="">Sobre</a>
-          <a href="">Entrar</a>
+          <a href="login.html">Entrar</a>
         </nav>
       </div>
     </header>
