--- a/Alura/Flex e grid/exercitando/exercitando-grid.html
+++ b/Alura/Flex e grid/exercitando/exercitando-grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="exercitando-grid.css" />
+    <link rel="stylesheet" href="grid-without-grid-area.css" />
   </head>
   <body class="corpo">
     <header class="cabecalho"></header>
