--- a/Alura/react-ts/aluroni/public/index.html
+++ b/Alura/react-ts/aluroni/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
 
     <title>Aluroni</title>
   </head>
