--- a/origamid/typescript/data_manipulation/index.html
+++ b/origamid/typescript/data_manipulation/index.html
@@ -18,10 +18,11 @@
         <h2>Estatística</h2>
         <span id="total"></span>
         <hr />
-        <span>Cartão de credito: R$ 30.000,00</span>
-        <span>Boleto: R$ 30.000,00</span>
+        <span id="credit-card-amount"></span>
+        <br />
+        <span id="bolet-amount"></span>
         <hr />
-        <span>Paga: R$ 30.000,00</span>
+        <div id="metrics-transaction-status"></div>
       </section>
       <section>
         <h1>Dados</h1>
