feat: finish project

--- a/origamid/typescript/slider-story/index.html
+++ b/origamid/typescript/slider-story/index.html
@@ -22,7 +22,7 @@
         <img src="./assets/imagem_3.jpg" alt="Lobo3" />
         <video playsinline src="./assets/video.mp4"></video>
       </div>
-      <div id="controls"></div>
+      <div id="slide-controls"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
