--- a/origamid/typescript/slider-story/index.html
+++ b/origamid/typescript/slider-story/index.html
@@ -15,6 +15,17 @@
   </head>
   <body>
     <h1>Stories</h1>
+    <div id="story">
+      <div id="story-item">
+        <span>+</span>
+      </div>
+      <div id="story-item">
+        <span>A</span>
+      </div>
+      <div id="story-item">
+        <span>O</span>
+      </div>
+    </div>
     <div id="slide">
       <div id="slide-elements">
         <img src="./assets/imagem_1.jpg" alt="Lobo1" class="active" />
