WIP: select story by user

--- a/origamid/typescript/slider-story/index.html
+++ b/origamid/typescript/slider-story/index.html
@@ -19,15 +19,14 @@
       <div id="story-item">
         <span>+</span>
       </div>
-      <div id="story-item">
-        <span>W</span>
-      </div>
-      <div id="story-item">
-        <span>O</span>
-      </div>
     </div>
     <div id="slide">
-      <div id="slide-elements"></div>
+      <div id="slide-elements">
+        <img src="./assets/imagem_1.jpg" alt="Lobo1" class="active" />
+        <img src="./assets/imagem_2.jpg" alt="Lobo2" />
+        <img src="./assets/imagem_3.jpg" alt="Lobo3" />
+        <video playsinline src="./assets/video.mp4"></video>
+      </div>
       <div id="slide-controls"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
